# cleazy

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  simple.c
include/cleazy/: common.h  impl.h  profiler.h  stub.h
src/: cleazy.c
